[gd_scene load_steps=10 format=2]

[ext_resource path="res://wifi.png" type="Texture" id=1]
[ext_resource path="res://glass.jpeg" type="Texture" id=2]
[ext_resource path="res://brick-wall.jpeg" type="Texture" id=3]
[ext_resource path="res://mirror.png" type="Texture" id=4]
[ext_resource path="res://sofa.png" type="Texture" id=5]
[ext_resource path="res://game_scene.gd" type="Script" id=6]
[ext_resource path="res://router.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 85.5, 62.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 194, 14 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 391, 108 )
scale = Vector2( 0.216279, 0.20336 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 392, 507 )
scale = Vector2( 0.0339775, 0.124167 )
texture = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 393, 299 )
scale = Vector2( 0.5, 0.57541 )
texture = ExtResource( 4 )

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( 748, 475 )
scale = Vector2( 0.434694, 0.470443 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="."]
margin_left = 612.0
margin_top = 82.0
margin_right = 910.0
margin_bottom = 166.0
rect_pivot_offset = Vector2( 70, 42 )
text = "Adormeci porque estou sem internet... reposicione o meu roteador usando as setinhas para cima e para baixo do teclado para melhorar o sinal!"
autowrap = true

[node name="Label3" type="Label" parent="."]
margin_left = 414.0
margin_top = 504.0
margin_right = 510.0
margin_bottom = 532.0
rect_pivot_offset = Vector2( 70, 42 )
text = "Porta de vidro"
autowrap = true

[node name="brickLabel" type="Label" parent="."]
margin_left = 547.0
margin_top = 236.0
margin_right = 993.0
margin_bottom = 267.0
rect_pivot_offset = Vector2( 70, 42 )
custom_colors/font_color = Color( 0.972549, 0.152941, 0.74902, 1 )
text = "Oops... a parede bloqueia o sinal. Tente mudar o roteador de lugar"
autowrap = true

[node name="mirrorLabel" type="Label" parent="."]
margin_left = 547.0
margin_top = 236.0
margin_right = 993.0
margin_bottom = 267.0
rect_pivot_offset = Vector2( 70, 42 )
custom_colors/font_color = Color( 0.972549, 0.152941, 0.74902, 1 )
text = "Oops... o espelho bloqueia o sinal. Tente mudar o roteador de lugar"
autowrap = true

[node name="thanksLabel" type="Label" parent="."]
margin_left = 628.0
margin_top = 236.0
margin_right = 898.0
margin_bottom = 267.0
rect_pivot_offset = Vector2( 70, 42 )
custom_colors/font_color = Color( 0.313726, 0.972549, 0.152941, 1 )
text = "Obrigado!!! VocÃª salvou o meu Netlfix :)"
autowrap = true

[node name="Label2" type="Label" parent="."]
margin_left = 368.0
margin_top = 249.0
margin_right = 425.0
margin_bottom = 263.0
rect_pivot_offset = Vector2( 46, 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Espelho"
uppercase = true

[node name="Button" type="Button" parent="."]
margin_left = 628.0
margin_top = 166.0
margin_right = 867.0
margin_bottom = 213.0
text = "Pode acordar! Acho que consertei..."

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
script = ExtResource( 7 )

[node name="router" type="Sprite" parent="KinematicBody2D"]
position = Vector2( 192, 124 )
scale = Vector2( 0.296875, 0.289062 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 192, 124 )
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 184, 4 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 192, 600 )
shape = SubResource( 2 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
